--- a/mev.css
+++ b/mev.css
@@ -13,12 +13,27 @@
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.4);
 }
 
+body {
+    font-family: 'Noto Sans JP', sans-serif;
+}
+
+.normal-text {
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 13px;
+    font-weight: light;
+}
+
 /* Menu section header */
 
 .text-aux {
     font-family: 'Noto Sans JP', sans-serif;
     font-size: 10px;
     color: #6d6d6d;
+}
+
+h1 {
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 18px;
 }
 
 h2 {
@@ -33,6 +48,7 @@ button {
     border-radius: 2px;
     color: white;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.4);
+    font-weight: bold;
 }
 
 button:hover {
