--- a/mev.css
+++ b/mev.css
@@ -8,10 +8,30 @@
     box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4);
 }
 
+/* UI Component: Floating menu */
+
 #vue_menu {
     background-color: #ffffff;
-    padding: 8px;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.4);
+}
+
+.menu_toolbar {
+    background-color: #424242;
+    color: white;
+    height: 48px;
+    /* prevent accidental size change */
+    overflow: hidden;
+}
+
+.menu_body {
+    padding: 8px;
+}
+
+button.toolbar_button {
+    box-shadow: none;
+    width: 48px;
+    height: 48px;
+    padding: 12px;
 }
 
 body {
