--- a/mev.css
+++ b/mev.css
@@ -115,6 +115,17 @@ button {
     font-weight: bold;
 }
 
+label.filebutton {
+    background-color: #424242;
+    border: none;
+    padding: 8px;
+    border-radius: 2px;
+    color: white;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.4);
+    font-weight: bold;
+    font-size: 12px;
+}
+
 button:hover {
     background-color: #6d6d6d;
     box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4);
