Add env light switcher

--- a/mev.css
+++ b/mev.css
@@ -81,6 +81,10 @@ body {
     font-family: 'Noto Sans JP', sans-serif;
 }
 
+button {
+    font-family: 'Noto Sans JP', sans-serif;
+}
+
 .normal-text {
     font-family: 'Noto Sans JP', sans-serif;
     font-size: 13px;
